# omni-core

./: .gitmodules  CMakeLists.txt
src/: build_shaders.sh  main.c
src/include/: dynam_array.h  main.h
